# NovaScript

./: LICENSE  README.md
compiler/: Cargo.toml
compiler/src/: error.rs  lib.rs  main.rs
compiler/src/lexer/: mod.rs  scanner.rs  token.rs
docs/: CODE_OF_CONDUCT.md  compiler_architecture.md  getting_started.md  language_specification.md  runtime.md  standard_library.md  tools.md
