[package]
name = "novascript-compiler"
version = "0.1.0"
edition = "2021"
authors = ["NovaScript Team"]
description = "Compilatore per il linguaggio di programmazione NovaScript"
license = "MIT"
repository = "https://github.com/SeriumTW/NovaScript"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
anyhow = "1.0.71"
thiserror = "1.0.40"
lalrpop-util = "0.20.0"
regex = "1.8.3"
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
walrus = "0.20.1"
wasmparser = "0.107.0"
lazy_static = "1.4.0"
indexmap = "1.9.3"
dashmap = "5.4.0"
tokio = { version = "1.28.2", features = ["full"] }
async-trait = "0.1.68"
futures = "0.3.28"

[dev-dependencies]
pretty_assertions = "1.3.0"
tempfile = "3.5.0"
criterion = "0.5.1"

[build-dependencies]
lalrpop = "0.20.0"

[lib]
name = "novascript"
path = "src/lib.rs"

[[bin]]
name = "nova"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false

[features]
default = []
wasm-gc = []
nightly = []